--- a/src/assets/sass/_custom.scss
+++ b/src/assets/sass/_custom.scss
@@ -80,12 +80,46 @@ body {
     }
 }
 
-///Search
+///Search input
+
+
+.md-form.input-group.search-big {
+    margin-bottom: 0;
+}
 
 .search-big {
     width: 50%;
     margin: 0 auto;
 
+    .form-control {
+        height: 4rem;
+        border-radius: 3rem;
+        font-size: 1.8rem;
+        font-weight: 300;
+        font-family: Open Sans;
+        box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.06), 0 2px 10px 0 rgba(0, 0, 0, 0.02);
+    }
+}
+
+@media only screen and (max-width : 768px) {
+    .search-big {
+        width: 100%;
+    }
+}
+
+.search-big .btn-neutral.search-big-button {
+    height: 5.25rem;
+    width: 5.1rem;
+    display: inline-block;
+    top: -6px;
+    border-top-right-radius: 2.3rem;
+    border-bottom-right-radius: 2.3rem;
+
+    i {
+        top: -3px;
+        font-size: 2.3rem;
+        right: 16px;
+    }
 }
 
 //////////Main-nav styles
