--- a/src/assets/sass/_custom.scss
+++ b/src/assets/sass/_custom.scss
@@ -221,6 +221,22 @@ body {
     }
 }
 
+.dropdown-custom-login {
+    background-color: $color-nav;
+    color: $white;
+    border-radius: 0;
+    box-shadow: none;
+    top: 68px;
+    padding: 0.2rem 0.2rem;
+}
+
+.dropdown-item:focus, 
+.dropdown-item:hover,
+.dropdown-menu .dropdown-item:active {
+    background-color: lighten($color-nav, 5%);
+    color: $white;
+}
+
 ////// Breadcrumb
 
 .header .navbar .breadcrumb {
