--- a/src/assets/sass/_variables.scss
+++ b/src/assets/sass/_variables.scss
@@ -11,5 +11,6 @@ $color-select: #0085B2;
 $color-incomplete: #FF8000;
 $color-complete: #92C100;
 $color-cancel: #D90000;
+$color-table-th: #a5d6e6;
 
 
