--- a/src/assets/sass/_variables.scss
+++ b/src/assets/sass/_variables.scss
@@ -6,6 +6,8 @@ $color-sidebar: #262A33;
 $color-body_text: #666;
 $color-mainpanel: #F6F6F6;
 $color-nav: #0085B2;
+$color-nav-sub: #35A1C7;
+$color-nav-sub2: #6FBAD5;
 $color-nav_text: #00B6F2;
 $color-select: #0085B2;
 $color-incomplete: #FF8000;
