--- a/src/assets/sass/_custom.scss
+++ b/src/assets/sass/_custom.scss
@@ -43,7 +43,7 @@ body {
 //////////Misc
 
 .profile_head {
-    background-color: lighten($color-nav, 7%);
+    background-color: $color-nav-sub2;
     margin-top: -15px;
     margin-right: -15px;
     padding: 3rem 0;
@@ -237,7 +237,7 @@ h6 {
 
     &:hover {
         text-decoration: none;
-        background-color: lighten($color-nav, 5%);
+        background-color: $color-nav-sub;
     }
 }
 
@@ -275,7 +275,7 @@ h6 {
 }
 
 .header .navbar > a {
-    border-left: 1px solid lighten($color-nav, 5%);
+    border-left: 1px solid $color-nav-sub;
     justify-content: center;
     color: $white;
 }
@@ -286,7 +286,7 @@ h6 {
     text-transform: uppercase;
 
     &:hover {
-        background-color: lighten($color-nav, 5%);
+        background-color: $color-nav-sub;
     }
 
     .header-profile {
@@ -308,7 +308,7 @@ h6 {
 .dropdown-item:focus, 
 .dropdown-item:hover,
 .dropdown-menu .dropdown-item:active {
-    background-color: lighten($color-nav, 5%);
+    background-color: $color-nav-sub;
     color: $white;
 }
 
@@ -362,7 +362,7 @@ h6 {
 //////////Tabs-wrapper
 
 .classic-tabs.tabs-cyan {
-    background-color: lighten($color-nav, 5%);
+    background-color: $color-nav-sub;
     padding-right: 0px;
 }
 
