--- a/src/assets/sass/_custom.scss
+++ b/src/assets/sass/_custom.scss
@@ -815,6 +815,10 @@ textarea.md-textarea {
     margin-bottom: 0;
 }
 
+ .md-textarea ~ .md-form {
+    margin-bottom: 0;
+}
+
 input[type=text], input[type=password], input[type=email], input[type=url], input[type=time], input[type=date], input[type=datetime-local], input[type=tel], input[type=number], input[type=search-md], input[type=search], textarea.md-textarea, input.form-control datepicker {
     background-color: $white;
     border-radius: .4rem;
@@ -829,6 +833,15 @@ input[type=text]:focus:not([readonly]) + label, input[type=password]:focus:not([
 input[type=text]:focus:not([readonly]), input[type=password]:focus:not([readonly]), input[type=email]:focus:not([readonly]), input[type=url]:focus:not([readonly]), input[type=time]:focus:not([readonly]), input[type=date]:focus:not([readonly]), input[type=datetime-local]:focus:not([readonly]), input[type=tel]:focus:not([readonly]), input[type=number]:focus:not([readonly]), input[type=search-md]:focus:not([readonly]), input[type=search]:focus:not([readonly]), textarea.md-textarea:focus:not([readonly]) {
     border-bottom: 1px solid #a5d6e6;
     box-shadow: none;
+}
+
+.select-wrapper input.select-dropdown:disabled {
+    background-color: $color-mainpanel;
+    border-bottom: 1px solid lighten($color-sidebar, 70%);
+}
+
+input[type=text]:disabled {
+    border-bottom: 1px solid lighten($color-sidebar, 70%);
 }
 
 input.md-form.addon {
