--- a/src/assets/sass/_custom.scss
+++ b/src/assets/sass/_custom.scss
@@ -48,6 +48,9 @@ body {
     margin-right: -15px;
 }
 
+
+
+
 .showdata_box .no_border,
 .no_border {
     border: none;
@@ -116,6 +119,13 @@ h6 {
     &-f {font-size: 1.5rem;}
     &-g {font-size: 1.75rem;}
     &-h {font-size: 2rem;}
+}
+
+.weight {
+    &-300 {font-weight: 300}
+    &-400 {font-weight: 400}
+    &-600 {font-weight: 600}
+    &-700 {font-weight: 700}
 }
 
 
@@ -1106,6 +1116,10 @@ input.md-form.addon {
 
 .btn-assign {
     background-color: $color-incomplete;
+}
+
+.btn_sub2 {
+    background-color: $color-nav-sub2;
 }
 
 .btn-white {
