--- a/src/assets/sass/_custom.scss
+++ b/src/assets/sass/_custom.scss
@@ -790,6 +790,7 @@ table td a:first-child {
     text-transform: uppercase;
     border-bottom: none;
     font-weight: 600;
+    white-space: nowrap;
 }
 
 .file_box_sty i {
@@ -799,6 +800,16 @@ table td a:first-child {
     position: relative;
     top: -2px;
 }
+
+///Remove columns for mobile
+
+@media only screen and (max-width : 768px) {
+    .file_box .file_box_sty:nth-child(n+2) {
+        display: none;
+    }
+}
+    
+    
 
 .file_icon {
     white-space: nowrap;
@@ -868,6 +879,12 @@ table td a:first-child {
 .icon_neutral:hover {
     color: $color-nav;
 }
+
+
+
+
+
+
 
 
 ///////// Inputs
