--- a/src/assets/sass/_custom.scss
+++ b/src/assets/sass/_custom.scss
@@ -658,6 +658,11 @@ h6 {
     font-size: .9rem;
 }
 
+.table tr td:nth-child(2) {
+    text-transform: uppercase;
+    font-weight: 700;
+}
+
 .table thead th {
     background-color: $color-table-th;
     color: $color-sidebar;
