--- a/src/assets/sass/app.scss
+++ b/src/assets/sass/app.scss
@@ -49,7 +49,7 @@
 @import "node_modules/bootstrap/scss/modal";
 @import "node_modules/bootstrap/scss/tooltip";
 @import "node_modules/bootstrap/scss/popover";
-@import "node_modules/bootstrap/scss/carousel";
+//@import "node_modules/bootstrap/scss/carousel";
 
 // Utility classes
 @import "node_modules/bootstrap/scss/utilities";
@@ -65,7 +65,7 @@
 
 // Variables
 @import "node_modules/mdb-pro/sass/mdb/free/data/colors";
-@import "node_modules/mdb-pro/sass/mdb/free/data/variables-b4";
+//@import "node_modules/mdb-pro/sass/mdb/free/data/variables-b4";
 @import "node_modules/mdb-pro/sass/mdb/free/data/variables";
 
 //Global
@@ -82,7 +82,7 @@
 @import "node_modules/mdb-pro/sass/mdb/free/navbars";
 @import "node_modules/mdb-pro/sass/mdb/free/hover-effects";
 @import "node_modules/mdb-pro/sass/mdb/free/footer";
-@import "node_modules/mdb-pro/sass/mdb/free/carousels-basic";
+//@import "node_modules/mdb-pro/sass/mdb/free/carousels-basic";
 
 // MDB Premium
 @import "node_modules/mdb-pro/sass/mdb/pro/forms-pro";
@@ -97,18 +97,18 @@
 @import "node_modules/mdb-pro/sass/mdb/pro/light-box";
 @import "node_modules/mdb-pro/sass/mdb/pro/side-nav";
 @import "node_modules/mdb-pro/sass/mdb/pro/navbars-pro";
-@import "node_modules/mdb-pro/sass/mdb/pro/carousels-pro";
+//@import "node_modules/mdb-pro/sass/mdb/pro/carousels-pro";
 @import "node_modules/mdb-pro/sass/mdb/pro/modals-pro";
 @import "node_modules/mdb-pro/sass/mdb/pro/toasts";
-@import "node_modules/mdb-pro/sass/mdb/pro/scrollspy";
+//@import "node_modules/mdb-pro/sass/mdb/pro/scrollspy";
 @import "node_modules/mdb-pro/sass/mdb/pro/charts-pro";
 @import "node_modules/mdb-pro/sass/mdb/pro/animations-pro";
 @import "node_modules/mdb-pro/sass/mdb/pro/scrollbar";
-@import "node_modules/mdb-pro/sass/mdb/pro/ecommerce";
-@import "node_modules/mdb-pro/sass/mdb/pro/skins";
-@import "node_modules/mdb-pro/sass/mdb/pro/chips";
-@import "node_modules/mdb-pro/sass/mdb/pro/parallax";
-@import "node_modules/mdb-pro/sass/mdb/pro/stepper";
+//@import "node_modules/mdb-pro/sass/mdb/pro/ecommerce";
+@import "overrides/skins";
+//@import "node_modules/mdb-pro/sass/mdb/pro/chips";
+//@import "node_modules/mdb-pro/sass/mdb/pro/parallax";
+//@import "node_modules/mdb-pro/sass/mdb/pro/stepper";
 
 // DATE & TIME PICKERS
 @import "node_modules/mdb-pro/sass/mdb/pro/date_picker/default.scss";
@@ -116,14 +116,14 @@
 @import "node_modules/mdb-pro/sass/mdb/pro/date_picker/default.time.scss";
 
 // SECTIONS
-@import "node_modules/mdb-pro/sass/mdb/pro/sections/blog";
-@import "node_modules/mdb-pro/sass/mdb/pro/sections/magazine";
-@import "node_modules/mdb-pro/sass/mdb/pro/sections/pricing";
-@import "node_modules/mdb-pro/sass/mdb/pro/sections/testimonials";
-@import "node_modules/mdb-pro/sass/mdb/pro/sections/features";
-@import "node_modules/mdb-pro/sass/mdb/pro/sections/team";
+//@import "node_modules/mdb-pro/sass/mdb/pro/sections/blog";
+//@import "node_modules/mdb-pro/sass/mdb/pro/sections/magazine";
+//@import "node_modules/mdb-pro/sass/mdb/pro/sections/pricing";
+//@import "node_modules/mdb-pro/sass/mdb/pro/sections/testimonials";
+//@import "node_modules/mdb-pro/sass/mdb/pro/sections/features";
+//@import "node_modules/mdb-pro/sass/mdb/pro/sections/team";
 @import "node_modules/mdb-pro/sass/mdb/pro/sections/templates";
-@import "node_modules/mdb-pro/sass/mdb/pro/sections/social";
+//@import "node_modules/mdb-pro/sass/mdb/pro/sections/social";
 
 
 @import "custom";
