<form> tag reposition

--- a/src/assets/sass/app.scss
+++ b/src/assets/sass/app.scss
@@ -106,7 +106,7 @@
 @import "node_modules/mdb-pro/sass/mdb/pro/scrollbar";
 //@import "node_modules/mdb-pro/sass/mdb/pro/ecommerce";
 @import "overrides/skins";
-//@import "node_modules/mdb-pro/sass/mdb/pro/chips";
+@import "node_modules/mdb-pro/sass/mdb/pro/chips";
 //@import "node_modules/mdb-pro/sass/mdb/pro/parallax";
 //@import "node_modules/mdb-pro/sass/mdb/pro/stepper";
 
