--- a/src/assets/sass/_custom.scss
+++ b/src/assets/sass/_custom.scss
@@ -70,7 +70,7 @@ body {
     padding: 0 2rem;
     border-left: 1px solid transparentize($white, .5);
     line-height: 2.2rem;
-    
+
     &:first-child {
         border-left: none;
     }
@@ -165,7 +165,7 @@ h6 {
 
 a {
     color: $color-body_text;
-    
+
     &:hover {
         color: $color-nav-sub;
     }
@@ -192,7 +192,7 @@ a {
 .switch_sty {
     border-bottom: 1px solid darken($color-mainpanel, 15%);
     padding: 1.5rem 0;
-    
+
     &:last-child {
         border-bottom: none;
     }
@@ -200,7 +200,7 @@ a {
 
 .switch label input[type=checkbox]:checked + .lever {
     background-color: $color-table-th;
-        
+
     &:after {
     background-color: $color-nav;
     }
@@ -218,11 +218,11 @@ a {
     display: inline-block;
     border-radius: .25rem;
 }
-    
+
 .table tr .tasktype-1 {
     @extend .tasktype;
     background-color: $color-incomplete;
-}  
+}
 
 .table tr .tasktype-2 {
     @extend .tasktype;
@@ -283,7 +283,7 @@ a {
 .search-big {
     width: 50%;
     margin: 0 auto;
-    
+
     input::placeholder {
         font-size: 2rem;
         font-family: $font-family-base;
@@ -297,7 +297,7 @@ a {
         font-family: Open Sans;
         box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.06), 0 2px 10px 0 rgba(0, 0, 0, 0.02);
     }
-    
+
     span {
             z-index: 0;
     }
@@ -320,7 +320,7 @@ a {
     position: absolute;
     right: -42px;
     z-index: 2;
-    
+
     i {
         top: -3px;
         font-size: 2.3rem;
@@ -335,7 +335,7 @@ a {
     box-shadow: none;
 }
 
-.header .fa {
+header .fa {
     color: $white;
     align-self: center;
 
@@ -344,7 +344,7 @@ a {
     }
 }
 
-.header .tag {
+header .tag {
     display: inline-block;
     position: absolute;
     margin-left: .5rem;
@@ -413,22 +413,22 @@ a {
     }
 }
 
-.header .user-nav {
+header .user-nav {
     height: 70px;
 }
 
-.header .navbar {
+header .navbar {
     padding: 0;
     border-radius: 0;
 }
 
-.header .navbar > a {
+header .navbar > a {
     border-left: 1px solid $color-nav-sub;
     justify-content: center;
     color: $white;
 }
 
-.header .dropdown-toggle {
+header .dropdown-toggle {
     padding: 0 auto;
     font-size: .8rem;
     text-transform: uppercase;
@@ -453,7 +453,7 @@ a {
     padding: 0.2rem 0.2rem;
 }
 
-.dropdown-item:focus, 
+.dropdown-item:focus,
 .dropdown-item:hover,
 .dropdown-menu .dropdown-item:active {
     background-color: $color-nav-sub;
@@ -463,7 +463,7 @@ a {
 
 ////// Breadcrumb
 
-.header .navbar .breadcrumb {
+header .navbar .breadcrumb {
     height: 70px;
     margin-right: auto;
     background-color: $color-nav;
@@ -490,8 +490,8 @@ a {
 }
 
 @media only screen and (max-width : 1992px) {
-    .header .navbar .breadcrumb,
-    .header .navbar .breadcrumb a {
+    header .navbar .breadcrumb,
+    header .navbar .breadcrumb a {
         font-size: .9rem;
     }
 }
@@ -501,7 +501,7 @@ a {
 }
 
 @media only screen and (max-width : 768px) {
-    .header .navbar .breadcrumb {
+    header .navbar .breadcrumb {
         display: none !important;
     }
 }
@@ -720,15 +720,15 @@ a {
     height: 60px;
     font-weight: 600;
     cursor: pointer;
-    
+
     &:first-child {
         border-top-left-radius: .9rem;
     }
-    
+
     &:last-child {
         border-top-right-radius: .9rem;
     }
-    
+
     &:after {
         font-family: FontAwesome;
         content: "\f0dc";
@@ -736,7 +736,7 @@ a {
         line-height: 0;
         margin-left: 0.5rem;
         vertical-align: middle;
-        
+
     }
 }
 
@@ -819,17 +819,17 @@ table td a:first-child {
     height: 5.5rem;
     padding: .7rem;
     margin-top: .2rem;
-        
+
     & > * {
         border-left: 1px solid $color-mainpanel;
         line-height: 5.5rem;
         padding-left: 1rem;
     }
-    
+
     & > *:first-child {
         border-left: 0;
-        padding-left: 0;    
-    }    
+        padding-left: 0;
+    }
 }
 
 .files .file_box:first-child {
@@ -860,12 +860,12 @@ table td a:first-child {
         display: none;
     }
 }
-    
-    
+
+
 
 .file_icon {
     white-space: nowrap;
-    overflow: hidden; 
+    overflow: hidden;
 }
 
 .file_icon:before {
@@ -876,7 +876,7 @@ table td a:first-child {
     margin-right: 1.1rem;
     margin-left: 0.5rem;
     vertical-align: middle;
-    
+
 }
 
 .file_icon:hover::before {
@@ -884,7 +884,7 @@ table td a:first-child {
 }
 
 .file_icon[href$=".jpg"]:before {
-    content: "\f1c5";        
+    content: "\f1c5";
 }
 
 .file_icon[href$=".pdf"]:before {
@@ -913,25 +913,25 @@ table td a:first-child {
         font-size: 1.7rem;
         margin-right: .7rem;
         vertical-align: middle;
-    }    
+    }
 }
 
 .icon_cancel {
-    &:hover {color: $color-cancel;}  
+    &:hover {color: $color-cancel;}
     &:hover::before {color: $color-cancel;}
-    &:before {content: "\f2d3";}    
+    &:before {content: "\f2d3";}
 }
 
 .icon_download {
     &:hover {color: $color-select;}
     &:hover::before {color: $color-select;}
-    &:before {content: "\f0ed";}    
+    &:before {content: "\f0ed";}
 }
 
 .icon_cost_approval {
     &:hover {color: $color-select;}
     &:hover::before {color: $color-select;}
-    &:before {content: "\f08b";}    
+    &:before {content: "\f08b";}
 }
 
 .icon_assign {
@@ -943,7 +943,7 @@ table td a:first-child {
         margin-top: -12px;
         margin-bottom: -12px;
         display: inline-block;
-    }    
+    }
 }
 
 .icon_handler {
@@ -951,9 +951,9 @@ table td a:first-child {
     width: 40px;
     height: 16px;
     cursor: move;
-    
+
     &:hover {color: $color-select;}
-    &:hover::before {color: $color-select;}   
+    &:hover::before {color: $color-select;}
 }
 
 
@@ -1000,7 +1000,7 @@ label {
 }
 
 .md-form {
-    margin-bottom: 2.2rem; 
+    margin-bottom: 2.2rem;
 }
 
 .md-form label {
@@ -1022,7 +1022,7 @@ label {
 
 textarea.md-textarea {
     font-family: $font-family-base;
-    color: $color-body_text; 
+    color: $color-body_text;
     padding: 0.9rem 0 3rem 0;
     margin-bottom: 0;
 }
@@ -1152,7 +1152,7 @@ input.md-form.addon {
     background-color: $color-nav;
 }
 
-.picker__nav--prev:hover, 
+.picker__nav--prev:hover,
 .picker__nav--next:hover {
     cursor: pointer;
     color: $white;
@@ -1173,7 +1173,7 @@ input.md-form.addon {
 }
 
 .picker__button--today,
-.picker__button--clear, 
+.picker__button--clear,
 .picker__button--close {
     font-family: $font-family-base;
     font-weight: 600;
@@ -1182,11 +1182,11 @@ input.md-form.addon {
     border-radius: .4rem;
     color: $white;
     padding: 0.8rem 0 0.7rem 0;
-    
+
     &:before {
         display: none;
     }
-    
+
     &:hover {
         background-color: $color-table-th;
         color: $color-nav;
@@ -1351,28 +1351,28 @@ input.md-form.addon {
 
 .color-nav {
     color: $color-nav;
-}  
-    
+}
+
 .color-nav-sub {
     color: $color-nav-sub;
-} 
-    
+}
+
 .color-nav-sub2 {
     color: $color-nav-sub2;
-}  
-    
+}
+
 .color-incomplete {
     color: $color-incomplete;
 }
-    
+
 .color-complete {
     color: $color-complete;
-}  
-    
+}
+
 .color-cancel {
     color: $color-cancel;
-}    
-    
+}
+
 .color-table-th {
     color: $color-table-th;
 }
