Reorganize sass files, start clearing custom.scss

--- a/src/assets/sass/overrides/_skins.scss
+++ b/src/assets/sass/overrides/_skins.scss
@@ -2,7 +2,7 @@
 $sk-skin-primary-color: #309e9e;
 $sk-skin-navbar: #0085b2;
 $sk-skin-accent: #309e9e;
-$sk-skin-flat: #383048;
+$sk-skin-flat: #262A33;
 // Gradients
 $sk-skin-gradient-start: #222735;
 $sk-skin-gradient-end: #63739c;
