--- a/src/assets/sass/_variables.scss
+++ b/src/assets/sass/_variables.scss
@@ -110,9 +110,9 @@ $body-color: #666666 !default;
 //
 // Style anchor elements.
 
-$link-color:                 $brand-primary !default;
+$link-color:                 $body-color !default;
 $link-decoration:            none !default;
-$link-hover-color:           darken($link-color, 15%) !default;
+$link-hover-color:           #35A1C7 !default;
 $link-hover-decoration:      underline !default;
 
 
