--- a/src/assets/sass/_custom.scss
+++ b/src/assets/sass/_custom.scss
@@ -6,29 +6,17 @@
     display: flex;
 }
 
-.sidebar {
-    min-width: 260px;
-    background-color: $color-sidebar;
-}
-
 .container-fluid {
-    background-color: $color-mainpanel;
-    flex: 1;
-    padding-left: 260px;
+    padding-left: 260px; //TODO: move to main
 }
 
 @media only screen and (max-width : 1440px) {
     header, .container-fluid, .main-content {
-        padding-left: 0;
+        padding-left: 0; //TODO: move to main
     }
 }
 
-.main-nav {
-    background-color: $color-nav;
-    height: 70px;
-}
-
-.content {
+.content { //TODO: remove this
     padding-left: 15px;
     padding-top: 15px;
 }
@@ -41,6 +29,7 @@
     margin-right: -15px;
 }
 
+//TODO: move to profile section
 .showdata_box .no_border,
 .no_border {
     border: none;
@@ -152,18 +141,6 @@ h6 {
     &-600 {font-weight: 600}
     &-700 {font-weight: 700}
 }
-
-
-//////////Styles
-
-a {
-    color: $color-body_text;
-
-    &:hover {
-        color: $color-nav-sub;
-    }
-}
-
 
 ///Labels
 
@@ -325,7 +302,7 @@ a {
 //////////Main-nav styles
 
 .navbar {
-    box-shadow: none;
+    box-shadow: none; //TODO: consider removing from z-depth-1
 }
 
 header .fa {
@@ -457,19 +434,13 @@ header .dropdown-toggle {
 ////// Breadcrumb
 
 header .navbar .breadcrumb {
-    height: 70px;
     margin-right: auto;
-    background-color: $color-nav;
     text-transform: uppercase;
     font-size: .9rem;
     padding-left: 2rem;
-    align-self: flex-end;
-    margin-bottom: 0;
-    font-weight: 300;
-    white-space: nowrap;
 
     &:before {
-        color: aqua;
+        color: aqua; //TODO: move to scss var
     }
 
     a {
@@ -535,34 +506,9 @@ header .navbar .breadcrumb {
 
 //////Menu styles
 
-.side-nav .collapsible a {
-    margin-bottom: 0;
-    margin-top:  0;
-    height: 60px;
-    font-size: 1rem;
-}
-
 .side-nav {
     width: 260px;
     letter-spacing: .05rem;
-}
-
-.side-nav .sidenav-bg {
-    min-width: 260px;
-}
-
-.mdb-skin .side-nav {
-    background-color: $color-sidebar;
-}
-
-.side-nav .collapsible > li {
-    border-top: 1px solid lighten($color-sidebar, 10%);
-    text-transform: uppercase;
-    color: lighten($color-sidebar, 50%);
-    white-space: nowrap;
-    padding-right: 0;
-    padding-left: 0;
-    border-radius: 0;
 }
 
 .sidebar .nav-link {
@@ -577,41 +523,7 @@ header .navbar .breadcrumb {
     }
 }
 
-///sidebar menu sublinks
-.side-nav .collapsible-body ul > li {
-    line-height: 45px;
-    height: 45px;
-
-    &:hover {
-        background-color: lighten($color-sidebar, 3%);
-    }
-
-    a {
-        line-height: 45px;
-        font-size: .8rem;
-        height: 45px;
-
-        &:before {
-            content: " ";
-            display: inline-block;
-            box-shadow: 0 0 0 1px lighten($color-sidebar, 10%);
-            margin: 3px 8px 3px 3px;
-            width: 10px;
-            height: 10px;
-            border-radius: 50%;
-            position: relative;
-            top: 3px;
-            background-color: $color-sidebar;
-        }
-    }
-
-    &:active {
-        background-color: $color-sidebar;
-    }
-
-}
-
-.sidebar .nav-pills .nav-link.active {
+.sidebar .nav-pills .nav-link.active { 
     background-color: $color-select;
     color: $white;
 }
